--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
 <ion-content>
-  <ion-title>Ahs's first Pokemon Team !</ion-title>
+  <ion-title>Pokedex</ion-title>
   <app-all-pokemons></app-all-pokemons>
 </ion-content>
