--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -1,20 +1,21 @@
 <ion-grid>
   <ion-row>
     <ion-col *ngFor="let pokemon of pokemonArray" size="4">
-        <ion-card style="cursor: pointer"
-          (click)="goToDetails(pokemon.id)"
-          [style.background-color]="pokemon.color"
-        >
-          <ion-card-header>
-            <ion-card-title>{{pokemon.name}}</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            {{pokemon.name}} is {{pokemon.type}} type Pokemon !
-          </ion-card-content>
-        </ion-card>
+      <ion-card (click)="goToDetails(pokemon.id)"
+                [style.background-color]="pokemon.color"
+                style="cursor: pointer"
+      >
+        <ion-card-header>
+          <ion-card-title>{{pokemon.name}}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content *ngIf="pokemon.types.length == 1">
+          {{pokemon.name}} is a {{pokemon.types[0]}}-type Pokemon !
+        </ion-card-content>
+        <ion-card-content *ngIf="pokemon.types.length > 1">
+          {{pokemon.name}} is a {{pokemon.types[0]}}-type Pokemon and {{pokemon.types[1]}}-type Pokemon !
+        </ion-card-content>
+      </ion-card>
     </ion-col>
-
   </ion-row>
-
 </ion-grid>
 
