--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -1,12 +1,28 @@
 <ion-grid>
   <ion-row>
     <ion-col *ngFor="let pokemon of pokemonArray" size="4">
-      <ion-card (click)="goToDetails(pokemon.id)"
-                [style.background-color]="pokemon.color"
+      <ion-card *ngIf="pokemon.types.length == 1"
+        (click)="goToDetails(pokemon.id)"
+                [style.background-color]="pokemon.color[0]"
                 style="cursor: pointer"
       >
         <ion-card-header>
-          <ion-card-title>{{pokemon.name}}</ion-card-title>
+          <ion-card-title>#{{pokemon.id}} {{pokemon.name}}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content *ngIf="pokemon.types.length == 1">
+          {{pokemon.name}} is a {{pokemon.types[0]}}-type Pokemon !
+        </ion-card-content>
+        <ion-card-content *ngIf="pokemon.types.length > 1">
+          {{pokemon.name}} is a {{pokemon.types[0]}}-type Pokemon and a {{pokemon.types[1]}}-type Pokemon !
+        </ion-card-content>
+      </ion-card>
+      <ion-card *ngIf="pokemon.types.length > 1"
+        (click)="goToDetails(pokemon.id)"
+                [style.background]="'linear-gradient(to right,'+ pokemon.color[0] + ',' + pokemon.color[1]+ ')'"
+                style="cursor: pointer"
+      >
+        <ion-card-header>
+          <ion-card-title>#{{pokemon.id}} {{pokemon.name}}</ion-card-title>
         </ion-card-header>
         <ion-card-content *ngIf="pokemon.types.length == 1">
           {{pokemon.name}} is a {{pokemon.types[0]}}-type Pokemon !
