--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,12 @@
 <ion-content>
+
   <ion-title>Pokedex</ion-title>
+  <ion-item>
+    <ion-label>Language</ion-label>
+    <ion-select interface="popover">
+      <ion-select-option value="en">English</ion-select-option>
+      <ion-select-option value="fr">French</ion-select-option>
+    </ion-select>
+  </ion-item>
   <app-all-pokemons></app-all-pokemons>
 </ion-content>
