--- a/src/app/components/pokemon-details/pokemon-details.page.html
+++ b/src/app/components/pokemon-details/pokemon-details.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{pokemon.name}}</ion-title>
+    <ion-title [innerHTML]="'NAMES.' + pokemon.name | translate"></ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -17,8 +17,8 @@
         <ion-text>{{pokemon.description}}</ion-text>
         <br>
         <ion-text>Level :</ion-text>
-        <ion-input (ionChange)="manageLevel($event)" type="number"></ion-input>
-        <ion-button (click)="nextPokemon()" *ngIf="level == pokemon.evolutionLevel">Evolve</ion-button>
+        <ion-input (ionChange)="manageLevel($event)" type="number" min="1" max="100"></ion-input>
+        <ion-button (click)="nextPokemon()" *ngIf="pokemon.evolutionLevel && level == pokemon.evolutionLevel">Evolve</ion-button>
       </ion-col>
       <ion-col>
         <ion-list>
