--- a/src/app/components/pokemon-details/pokemon-details.page.scss
+++ b/src/app/components/pokemon-details/pokemon-details.page.scss
@@ -3,6 +3,10 @@ ion-img {
   height: 300px;
 }
 
+#stone {
+  width: 34px;
+  height: 34px;
+}
 .shake {
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
@@ -27,3 +31,5 @@ ion-img {
     transform: translate3d(4px, 0, 0);
   }
 }
+
+
