--- a/src/app/components/pokemon-details/pokemon-details.page.html
+++ b/src/app/components/pokemon-details/pokemon-details.page.html
@@ -31,14 +31,16 @@
           <ion-col>
             <ion-input (ionChange)="manageLevel($event)" max="100" min="1" type="number"></ion-input>
           </ion-col>
+        </ion-row>
           <ion-row>
             <ion-button (click)="nextPokemon()"
                         *ngIf="pokemon.evolutionLevel && level >= pokemon.evolutionLevel">{{'EVOLVE' | translate}}
             </ion-button>
             <ion-button (click)="nextPokemon()" *ngIf="pokemon.exchange">{{'EXCHANGE' | translate}}</ion-button>
-            <ion-img [src]='pokemon.stone'></ion-img>
+            <div *ngFor="let stone of pokemon.stone">
+              <ion-img (click)="useStone(stone)" id="stone" [src]='stone'></ion-img>
+            </div>
           </ion-row>
-        </ion-row>
       </ion-col>
       <ion-col>
         <ion-list>
