Refacto card style Change title's font + link on it Added Caterpie pic (poor Caterpie :( )
WIP shake after navigate

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
   <ion-header>
-    <ion-title>Pokedex</ion-title>
+    <ion-title (click)="goBackToPokedex()">Pokedex</ion-title>
     <select (change)="selectedLang($event)">
       <option *ngFor="let lang of langSelect"
               [value]="lang"> {{ lang }}</option>
