--- a/src/app/components/pokemon-details/pokemon-details.page.scss
+++ b/src/app/components/pokemon-details/pokemon-details.page.scss
@@ -1,15 +1,16 @@
-ion-img {
+#img {
   width: 370px;
   height: 300px;
+  cursor: pointer;
 }
 
 #stone {
   width: 34px;
   height: 34px;
 }
+
 .shake {
-  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-  transform: translate3d(0, 0, 0);
+  animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
   backface-visibility: hidden;
   perspective: 1000px;
 }
