--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import '../theme/variables.scss';
 
 ion-title {
   cursor: pointer;
   font-size: 30px;
   font-family: 'Press Start 2P', cursive;
 }
+
