--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -67,16 +67,10 @@ body.dark {
   --ion-color-light-shade: #1e2023;
   --ion-color-light-tint: #383a3e;
 
-  ion-card-content {
-    color: #ffffff;
-  }
-
-  ion-title {
+  ion-card-content, ion-title, ion-label ion-select, form{
     color: #ffffff;
   }
 }
-
-
 
 /*
  * iOS Dark Theme
