--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -1,7 +1,8 @@
 <ion-content>
   <ion-grid *ngIf="allPokemon.getAllPokemons() | async as PokemonArray">
     <ion-row>
-     <jw-pagination [items]="PokemonArray" (changePage)="setPage($event)"></jw-pagination>
+      <jw-pagination (changePage)="setPage($event)" [items]="PokemonArray" [pageSize]="24">
+      </jw-pagination>
     </ion-row>
     <ion-row>
       <ion-col *ngFor="let pokemon of pokemonArrayByPages" sizeLg="2" sizeXs="11">
