--- a/src/app/components/jwt-pagination/jwt-pagination.component.html
+++ b/src/app/components/jwt-pagination/jwt-pagination.component.html
@@ -1,11 +1,10 @@
 <div *ngIf="pager.pages && pager.pages.length" class="pagination">
-  <ion-button color="light" [disabled]="pager.currentPage === 1" class="page-item first-item">
-    <a (click)="setPage(1)" class="page-link">First</a>
+  <ion-button color="light" [disabled]="pager.currentPage === 1" class="page-item first-item"
+              (click)="setPage(1)">{{'FIRST' | translate}}</ion-button>
+  <ion-button (click)="setPage(page)" color="light" *ngFor="let page of pager.pages" class="page-item number-item">
+    {{page}}
   </ion-button>
-  <ion-button color="light" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}" class="page-item number-item">
-    <a (click)="setPage(page)" class="page-link">{{page}}</a>
-  </ion-button>
-  <ion-button color="light" [disabled]="pager.currentPage === pager.totalPages" class="page-item last-item">
-    <a (click)="setPage(pager.totalPages)" class="page-link">Last</a>
+  <ion-button color="light" [disabled]="pager.currentPage === pager.totalPages" class="page-item last-item"
+              (click)="setPage(pager.totalPages)">{{'LAST' | translate}}
   </ion-button>
 </div>
