--- a/src/app/components/all-pokemons/all-pokemons.component.html
+++ b/src/app/components/all-pokemons/all-pokemons.component.html
@@ -1,7 +1,7 @@
 <ion-content>
-  <ion-grid *ngIf="allPokemon.getAllPokemons() | async">
+  <ion-grid *ngIf="allPokemon.getAllPokemons() | async as PokemonArray">
     <ion-row>
-      <ion-col *ngFor="let pokemon of pokemonArrayByPages" sizeLg="2" sizeXs="11">
+      <ion-col *ngFor="let pokemon of PokemonArray | paginate: { itemsPerPage: 24, currentPage: p }" sizeLg="2" sizeXs="11">
         <ion-card (click)="goToDetails(pokemon.id)"
                   [ngStyle]="{'cursor': 'pointer',
                   'background': pokemon.types.length == 1 ?
@@ -23,6 +23,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </ion-row>
   </ion-grid>
 </ion-content>
