--- a/src/app/components/login/login-page.component.html
+++ b/src/app/components/login/login-page.component.html
@@ -1,30 +1,24 @@
 <ion-content>
   <ion-title>{{'LOGIN' | translate}}</ion-title>
   <form (ngSubmit)="validate()" [formGroup]="userForm">
-    <ion-col>
-      <ion-label>{{'USERNAME' | translate}}:</ion-label>
-      <input formControlName="name" type="text">
-      <ion-label *ngIf="usernameCtrl.dirty && usernameCtrl.hasError('required')">
-        * {{'USERNAME' | translate}} {{'IS_REQUIRED' | translate}}</ion-label>
-    </ion-col>
-    <div formGroupName="passwordForm">
-      <ion-col>
-        <ion-label>{{'PASSWORD' | translate}}:</ion-label>
-        <input formControlName="password" type="password">
-        <ion-label
-          *ngIf="passwordCtrl.dirty && passwordCtrl.hasError('required')">{{'PASSWORD' | translate}} {{'IS_REQUIRED' | translate}}</ion-label>
-      </ion-col>
-      <ion-col>
-        <ion-label>{{'PASSWORD_CONFIRM' | translate}}:</ion-label>
-        <input formControlName="passwordConfirm" type="password">
-        <ion-label
-          *ngIf="passwordConfirmCtrl.dirty && passwordConfirmCtrl.hasError('required')">{{'PASSWORD_CONFIRM_REQUIRED' | translate}}
-        </ion-label>
-      </ion-col>
-      <ion-label *ngIf="passwordForm.dirty && passwordForm.hasError('matchingError')">
-        {{'PASSWORD_NOT_MATCHING' | translate}}
-      </ion-label>
-    </div>
-    <ion-button [disabled]="userForm.invalid" type="submit">{{'VALIDATE' | translate}}</ion-button>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="2">
+          <ion-label>{{'USERNAME' | translate}}:</ion-label>
+          <ion-input formControlName="name" type="text"></ion-input>
+          <ion-label *ngIf="usernameCtrl.dirty && usernameCtrl.hasError('required')">
+            * {{'USERNAME' | translate}} {{'IS_REQUIRED' | translate}}</ion-label>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2">
+          <ion-label>{{'PASSWORD' | translate}}:</ion-label>
+          <ion-input formControlName="password" type="password"></ion-input>
+          <ion-label
+            *ngIf="passwordCtrl.dirty && passwordCtrl.hasError('required')">{{'PASSWORD' | translate}} {{'IS_REQUIRED' | translate}}</ion-label>
+        </ion-col>
+      </ion-row>
+        <ion-button [disabled]="userForm.invalid" type="submit">{{'VALIDATE' | translate}}</ion-button>
+    </ion-grid>
   </form>
 </ion-content>
