--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,15 +3,15 @@
 
 ion-title {
   cursor: pointer;
-  color: rgba(33,159,194,255);
+  //color: rgba(33,159,194,255);
   font-size: 30px;
   font-family: 'Press Start 2P', cursive;
 }
 
-ion-header {
-  background-color: rgba(72, 211, 234, 255);
-  border-color: rgba(124,208,224,255);
-}
+//ion-header {
+//  background-color: rgba(72, 211, 234, 255);
+//  border-color: rgba(124,208,224,255);
+//}
 
 .button {
   font-family: 'Press Start 2P', cursive;
