--- a/src/app/components/all-pokemons/all-pokemons.component.scss
+++ b/src/app/components/all-pokemons/all-pokemons.component.scss
@@ -6,6 +6,6 @@ ion-card-content {
   width: 40px;
 }
 
-ion-grid {
-  background-color: rgba(95,230,239,255);
-}
+//ion-grid {
+//  background-color: rgba(95,230,239,255);
+//}
