--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,6 +13,9 @@ ion-title {
 //  border-color: rgba(124,208,224,255);
 //}
 
+.theme-button {
+  background-color: transparent;
+}
 .button {
   font-family: 'Press Start 2P', cursive;
 }
