--- a/src/app/components/pokemon-details/pokemon-details.page.html
+++ b/src/app/components/pokemon-details/pokemon-details.page.html
@@ -1,11 +1,9 @@
 <ion-content>
   <ion-grid>
-    <ion-row>
-      <ion-toolbar>
-        <ion-title [innerHTML]="'NAMES.' + pokemon.name | translate"></ion-title>
-      </ion-toolbar>
+    <ion-row class="ion-justify-content-center">
+      <h2 [innerHTML]="'NAMES.' + pokemon.name | translate"></h2>
     </ion-row>
-    <ion-row>
+    <ion-row class="ion-justify-content-center">
       <ion-col>
         <ion-button (click)="previousPokemon()" *ngIf="pokemonId > 1">
           <ion-icon name="arrow-back-outline"></ion-icon>
@@ -16,13 +14,21 @@
           <ion-img id="img" (click)="playAudio()" [alt]="pokemon.name" [src]="pokemon.img"></ion-img>
         </ion-row>
         <ion-row>
+          <ion-text *ngIf="pokemon.types.length == 1">
+            {{'NAMES.' + pokemon.name | translate}} {{'CARD_SUBJECT_ONE' | translate}}
+            {{'TYPES.' + pokemon.types[0] | translate}} {{'POKEMON' | translate}}</ion-text>
+          <ion-text *ngIf="pokemon.types.length > 1">
+            {{'NAMES.' + pokemon.name | translate}} {{'CARD_SUBJECT_TWO' | translate}} {{'TYPES.' + pokemon.types[0] | translate}}
+            /{{'TYPES.' + pokemon.types[1] | translate}} {{'POKEMON' | translate}}</ion-text>
           <ion-text [innerHTML]="'DESC.' + pokemon.name | translate"></ion-text>
         </ion-row>
         <ion-row>
           <ion-col>
             <ion-text>{{'WEIGHT' | translate}}: {{pokemon.weight}}</ion-text>
           </ion-col>
-          <ion-col>{{'HEIGHT' | translate}}: {{pokemon.height}}</ion-col>
+          <ion-col>
+            <ion-text>{{'HEIGHT' | translate}}: {{pokemon.height}}</ion-text>
+          </ion-col>
         </ion-row>
         <ion-row>
           <ion-col>
@@ -32,32 +38,32 @@
             <ion-input (ionChange)="manageLevel($event)" max="100" min="1" type="number"></ion-input>
           </ion-col>
         </ion-row>
-          <ion-row>
-            <ion-button (click)="nextPokemon()"
-                        *ngIf="pokemon.evolutionLevel && level >= pokemon.evolutionLevel">{{'EVOLVE' | translate}}
-            </ion-button>
-            <ion-button (click)="nextPokemon()" *ngIf="pokemon.exchange">{{'EXCHANGE' | translate}}</ion-button>
-            <div *ngFor="let stone of pokemon.stone">
-              <ion-img (click)="useStone(stone)" id="stone" [src]='stone'></ion-img>
-            </div>
-          </ion-row>
+        <ion-row>
+          <ion-button (click)="nextPokemon()"
+                      *ngIf="pokemon.evolutionLevel && level >= pokemon.evolutionLevel">{{'EVOLVE' | translate}}
+          </ion-button>
+          <ion-button (click)="nextPokemon()" *ngIf="pokemon.exchange">{{'EXCHANGE' | translate}}</ion-button>
+          <div *ngFor="let stone of pokemon.stone">
+            <ion-img (click)="useStone(stone)" id="stone" [src]='stone'></ion-img>
+          </div>
+        </ion-row>
       </ion-col>
       <ion-col>
         <ion-list>
           <h1>{{'ATTACKS' | translate}}: </h1>
-<!--          <ion-item *ngFor="let attacks of pokemon.attacks">-->
-<!--            <ion-label>-->
-<!--              {{attacks}}-->
-<!--            </ion-label>-->
-<!--          </ion-item>-->
-          <ion-text> Coming soon ! </ion-text>
+          <!--          <ion-item *ngFor="let attacks of pokemon.attacks">-->
+          <!--            <ion-label>-->
+          <!--              {{attacks}}-->
+          <!--            </ion-label>-->
+          <!--          </ion-item>-->
+          <ion-text> Coming soon !</ion-text>
         </ion-list>
       </ion-col>
-      <ion-col>
+      <ion-row>
         <ion-button (click)="nextPokemon()" *ngIf="pokemonId < 151">
           <ion-icon name="arrow-forward-outline"></ion-icon>
         </ion-button>
-      </ion-col>
+      </ion-row>
     </ion-row>
   </ion-grid>
 </ion-content>
